--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   position: absolute;
   left: 25px;
   top: 35px;
-  width: 230px;
+  width: 200px;
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
 }
 
@@ -48,7 +48,7 @@ body {
   position: absolute;
   right: 25px;
   top: 35px;
-  width: 280px;
+  width: 200px;
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
 }
 
@@ -62,18 +62,18 @@ body {
 }
 
 .linea1 {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 2.2em;
+  font-family: 'Great Vibes', cursive;
+  font-size: 3.2em;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #f7e8b0;
+  color: #ffd86b;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
 }
 
 .linea2 {
-  font-family: 'Great Vibes', cursive;
-  font-size: 6.5em;
-  color: #ffd86b;
+  font-family:'Quicksand', sans-serif;
+  font-size: 2.5em;
+  color: white;
   text-shadow: 3px 3px 10px rgba(0,0,0,0.7);
 }
 
